--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <head>
+
   <style>
     table {
       width: 90%;
@@ -12,12 +13,14 @@
       padding: 8px;
       background-color: #8B0000;
       color: white;
+      text-align: center;
     }
 
     td {
       border: 1px solid #ddd;
       padding: 8px;
       background-color: #DCDCDC;
+      text-align: center;
     }
 
     body {
@@ -26,12 +29,14 @@
   </style>
 </head>
 
-<h1 style="padding-left=20px" margin="auto">Members</h1>
+<h1 style="margin-left:40px; margin-top:40px">Members</h1>
 
 <table>
   <thead>
     <tr>
-      <th colspan="3">UIN</th>
+      <% if current_user && current_user.admin%>
+        <th colspan="3">UIN</th>
+      <% end %>
       <th colspan="3">First Name</th>
       <th colspan="3">Last Name</th>
       <th colspan="3">Phone Number</th>
@@ -48,7 +53,9 @@
     <% @users.each do |user| %>
       <tr>
       <% if user.active %>
-        <td colspan="3"><%= user.uin %></td>
+        <% if current_user && current_user.admin%>
+          <td colspan="3"><%= user.uin %></td>
+        <% end %>
         <td colspan="3"><%= user.firstname %></td>
         <td colspan="3"><%= user.lastname %></td>
         <td colspan="3"><%= user.phonenumber %></td>
@@ -57,7 +64,9 @@
         <td colspan="3"><%= user.major %></td>
         <% if current_user && current_user.admin %>
           <% if current_user != user %>
-            <td><%= link_to 'Remove', User.update_active_status(user) %></td>
+          <td><div class="btn btn-outline-secondary" style="align-content=center">
+            <%= link_to 'Remove', members_remove_path(user), :class => "btn newMerchandise"  %>
+          </div></td>
           <% end %>
           <% if current_user == user %>
             <td></td>
