--- a/app/views/profile_page/index.html.erb
+++ b/app/views/profile_page/index.html.erb
@@ -30,16 +30,7 @@
   </style>
 </head>
 
-<h1 style="padding-left=20px" margin="auto">My Profile</h1>
-<button class="btn" type="button">
-  <%= link_to 'Edit', edit_user_registration_path(@user) %>
-</button>
-
-<% if current_user && current_user.admin %>
-  <button class="btn" type="button">
-    <%= link_to 'Admin Dashboard', admin_root_path %>
-  </button>
-<% end %>
+<h1 style="margin-left:40px; margin-top:40px">My Profile</h1>
 
 <table>
   <tbody>
@@ -76,5 +67,17 @@
     </tr>
   </tbody>
 </table>
+
+<div style="text-align:center; padding-top:20px; width:100%">
+  <div class="btn btn-outline-secondary">
+      <%= link_to 'Edit', edit_user_registration_path(@user), :class => "btn newMerchandise"  %>
+  </div>
+
+  <% if current_user && current_user.admin %>
+    <div class="btn btn-outline-secondary" style="align-content=center">
+      <%= link_to 'Admin Dashboard', admin_root_path, :class => "btn newMerchandise"  %>
+    </div>
+  <% end %>
+</div>
 
 <br>
