--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -94,3 +94,57 @@ h4 {
   margin-top: 2%;
   margin-bottom: 2%;
 }
+
+.login-nav-img{
+  position: relative;
+  right: 1050px;
+  top: -3px;
+  width: 40%;
+  height: auto;
+}
+
+.login-btns{
+  color: #344734;
+  background-color: transparent;
+  background-image: none;
+  border-color: #344734;
+  width:300px !important
+}
+.login-btns:hover {
+  color: #fff;
+  background-color: #344734 !important;
+  border-color: 344734;
+}
+
+.signup-btn {
+  background-color: #fff;
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  box-sizing: border-box;
+  color: #0f1111;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Amazon Ember",sans-serif;
+  font-size: 13px;
+  line-height: 29px;
+  padding: 0 10px 0 11px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: 100px;
+}
+
+.signup-btn:hover {
+  background-color: #f7fafa;
+}
+
+.signup-btn:focus {
+  border-color: #008296;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  outline: 0;
+}
