--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-expand-md navbar-dark navbarStyles">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -95,24 +96,14 @@
   </div>
 
 
-      <div class="actions" style="margin-top:20px">
-        <div style="display:flex;">
-          <div style="width:33%; margin-left: 0vw"> 
-
+      <div style="margin-top:25px; width: -5px;">
+        <div style="display:flex; justify-content: center;">
+          <div > 
+            <%= f.submit "Sign Up", class: "btn btn-outline-secondary" %>
           </div>
-          <div style="width:33%; justify-content:center; display:flex"> 
-            <%= f.submit "Sign Up", class: "btn btn-outline-secondary newMerchandise signupPageButton"  %>
-          </div>
-          <div style="width:33%"> 
-
-          </div>
-
-
         </div>
-
       </div>
 
       </div>
 </div>
-<% end %>
-
+<%end%>
