--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -31,11 +31,12 @@ h2 {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 25px;
     line-height: 39px;
-    display: flex;
-    align-items: center;
+    display: block;
     letter-spacing: -0.017em;
+    margin-left: auto; 
+    margin-right: auto; 
 }
 
 .active {
