--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -148,3 +148,29 @@ h4 {
   box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
   outline: 0;
 }
+
+.loggedin-nav{
+  position: relative;
+  right: 314px;
+  top: -3px;
+  width: 40%;
+  height: auto;
+}
+
+.signout-nav-link {
+  position: relative;
+  left: 180%;
+  top: 17px;
+}
+
+.profile-nav-link{
+  position: relative;
+  left: 149%;
+  top: 17px;
+}
+
+.one {
+  position: relative;
+  top: 17px; 
+  right: 79px;
+}
