--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -33,10 +33,9 @@ h2 {
     font-weight: 700;
     font-size: 25px;
     line-height: 39px;
-    display: block;
+    display: flex;
+    align-items: center;
     letter-spacing: -0.017em;
-    margin-left: auto; 
-    margin-right: auto; 
 }
 
 .active {
