--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -174,3 +174,64 @@ h4 {
   top: 17px; 
   right: 85px;
 }
+
+.flash-message-wrapper{
+  width: 630px;
+  text-align: center;
+  position:fixed; 
+  top: 0px;  
+  left: 29%;
+  z-index:9999; 
+  border-radius:0px;
+
+  -webkit-animation: seconds 1.0s forwards;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-delay: 5s;
+  animation: seconds 1.0s forwards;
+  animation-iteration-count: 1;
+  animation-delay: 5s;
+}
+@keyframes seconds{
+  0%{
+    opacity: 1;
+  }
+  10%{
+    opacity: 0.9;
+  }
+  20%{
+    opacity: 0.8;
+
+  }
+  30%{
+    opacity: 0.7;
+
+  }
+  40%{
+    opacity: 0.6;
+
+  }
+  50%{
+    opacity: 0.5;
+
+  }
+  60%{
+    opacity: 0.4;
+
+  }
+  70%{
+    opacity: 0.3;
+
+  }
+  80%{
+    opacity: 0.2;
+
+  }
+  90%{
+    opacity: 0.1;
+
+  }
+  100%{
+    display: none;
+    opacity: 0;
+  }
+}
