--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -172,7 +172,7 @@ h4 {
 .one {
   position: relative;
   top: 17px; 
-  right: 85px;
+  right: 70px;
 }
 
 .flash-message-wrapper{
@@ -234,4 +234,30 @@ h4 {
     display: none;
     opacity: 0;
   }
+}
+
+
+.aboutks{
+  font-family: Palatino;
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  font-size: 300%;
+}
+
+.aboutks_p{
+  font-family: Garamond;
+  text-align: center;
+  font-size: 120%;
+  margin-left: 450px;
+  margin-right: 450px;
+  
+}
+
+.aboutks_fp{
+  font-family: Palatino;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  font-size: 260%;
 }
