--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,105 @@
 <p id="notice"><%= notice %></p>
 
+
+<h1 style="margin-left:40px; margin-top:40px">Merchandise</h1>
+
+
+<% if current_user && current_user.admin %>
+
+    <div class="createButtonContainer">
+      <div class="btn btn-outline-secondary">
+          <%= link_to 'New Event', new_event_path, :class => "btn newMerchandise"  %>
+      </div>
+    </div>
+
+<% end %>
+
+<div class="merchCardContainers">
+    <% @events.each do |event| %>
+            <div class="merchCard">
+
+
+            <div class="merchCardTitle" style="padding:17px" >
+                <div style="width:33%">
+
+                
+                </div>
+                <div style="width:33%" class="merchCardTitle">
+                    <%= event.title  %>
+                </div>
+                <div style="width:33%">
+
+                <% if current_user && current_user.admin %>
+                    <div class="createMerchDelPayButtonContainer" style="">
+
+                        <div class="btn btn-outline-success">
+
+                             <%= link_to '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                                <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+                                </svg>'.html_safe,edit_event_path(event), :class => "btn newMerchandise"  %>
+                        </div>
+                        <div class="btn btn-outline-success">
+                             <%= link_to '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                            </svg>'.html_safe, event, method: :delete, data: { confirm: 'Are you sure?' },  :class => "btn newMerchandise"  %>
+                        </div>
+                    </div>
+                <% end %>
+
+
+
+                
+                </div>
+            </div>
+
+
+            <div style="padding: 12px 25px 25px 25px">
+                  <div class="merchCardBody1" style="display:flex;">
+                      <div style="width:50%; padding:10px">
+                          <Strong>Price: </Strong>
+                              <%= event.body %>
+                      </div>
+                      
+                      <div style="width:50%; padding:10px">
+                          <Strong>Location: </Strong>
+                              <%= event.location %>
+                      </div>
+                  </div>
+                  <div class="merchCardBody1" style="display:flex;">
+                      <div style="width:50%; padding:10px">
+                          <Strong>Organizer: </Strong>
+                              <%= event.organizer %>
+                      </div>
+                      
+                      <div style="width:50%; padding:10px">
+                          <Strong>User ID: </Strong>
+                              <%= event.user_id %>
+                      </div>
+                  </div>
+                    <div class="merchCardBody1" style="display:flex;">
+                      <div style="width:50%; padding:10px">
+                          <Strong>Date: </Strong>
+                              <%= event.date %>
+                      </div>
+                      
+                      <div style="width:50%; padding:10px">
+
+                      </div>
+                  </div>
+            </div>
+
+        </div>
+    <% end %>
+</div>
+
+ <div style="height:50vh"></div>
+
+
+
+
+
+
 <table>
   <thead>
     <tr>
@@ -35,6 +135,6 @@
 
 <br>
 
-<% if current_user && current_user.admin %>
-<%= link_to 'New Event', new_event_path %>
-<% end %>
+
+
+<%# link_to 'Show', event  %>
