--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -268,3 +268,9 @@ h4 {
   margin-left: 44%; 
   margin-bottom: 30px;
 }
+
+.etoa_title{
+  position: relative;
+  margin-left: 20%; 
+  margin-top: 30px;
+}
