--- a/app/views/announcements/_form2.html.erb
+++ b/app/views/announcements/_form2.html.erb
@@ -1,4 +1,4 @@
-
+<head><%= stylesheet_link_tag "style.css" %></head>
 <%= form_with(model: announcement) do |form| %>
   <% if announcement.errors.any? %>
     <div id="error_explanation">
@@ -12,7 +12,7 @@
     </div>
   <% end %>
 
-  <h1> Does the Announcement for this Event look OK? </h1>
+  <h1 class = "etoa_title"> Does the Announcement for this Event look OK? </h1>
   <div class="card" style="border-color:#913031; margin:20vh; margin-top:50px;">
   <div class="card-body">
   
